########################################################################
## SciDB-HDF5 
########################################################################
cmake_minimum_required (VERSION 2.6)
project (SciDB-HDF5)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")


add_subdirectory("src")


